# screeps-foreman

./: Cargo.toml  README.md
src/: constants.rs  layer.rs  layout.rs  lib.rs  location.rs  plan.rs  planner.rs  room_data.rs  room_scoring.rs  scoring.rs  search.rs  shim.rs  terrain.rs  utility.rs  visual.rs
src/layers/: anchor.rs  anchor_score.rs  controller_infra.rs  defense.rs  exit_setback.rs  extension.rs  extension_score.rs  hub_quality_score.rs  lab.rs  mineral_infra.rs  mod.rs  rcl_assignment.rs  reachability.rs  road_network.rs  road_prune.rs  source_infra.rs  spawn.rs  stamp_layer.rs  tower.rs  tower_coverage_score.rs  traffic_score.rs  upgrade_area_score.rs  upkeep_score.rs  utility.rs
src/pipeline/: analysis.rs  finalize.rs  mod.rs
src/stamps/: extension.rs  hub.rs  lab.rs  mod.rs  tower.rs
