[package]
name = "screeps-foreman"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["screeps-game-api"]
shim = []
profile = ["screeps-timing", "screeps-timing-annotate"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["rc"] }
itertools = "0.12"
bitflags = "2"
uuid = { version = "0.8", features = ["serde"] }
pathfinding = "4"
rs-graph = "0.20"
fnv = "1.0"
screeps-game-api = { version = "0.23", optional = true }
screeps-cache = { git = "https://github.com/Azaril/screeps-cache" }
screeps-timing = { git = "https://github.com/Azaril/screeps-timing", optional = true }
screeps-timing-annotate = { git = "https://github.com/Azaril/screeps-timing-annotate", optional = true }