[package]
name = "screeps-foreman"
version = "0.1.0"
authors = ["William Archbell <william@archbell.com>"]
edition = "2021"

[features]
default = []
## Enable the `screeps` feature to get convenience functions that call the
## Screeps game API directly: `execute_operations()`, `snapshot_structures()`,
## and `impl RoomVisualizer for RoomVisual`. Without this feature the crate
## compiles and runs on native targets for offline testing / benchmarking.
screeps = []
profile = ["screeps-timing", "screeps-timing-annotate"]

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["rc", "derive"] }
itertools = "0.12"
bitflags = "2"
uuid = { version = "0.8", features = ["serde"] }
pathfinding = "4"
rs-graph = "0.20"
fnv = "1.0"
screeps-game-api = "0.23"
screeps-common = { git = "https://github.com/Azaril/screeps-common" }
screeps-visual = { git = "https://github.com/Azaril/screeps-visual" }
screeps-cache = { git = "https://github.com/Azaril/screeps-cache" }
screeps-timing = { git = "https://github.com/Azaril/screeps-timing", optional = true }
screeps-timing-annotate = { git = "https://github.com/Azaril/screeps-timing-annotate", optional = true }
